# rs_novel

./: Cargo.toml
src/: main.rs
