[package]
name = "rs_novel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Egui dependencies init 
egui = "0.20.1"
egui_extras = { version = "0.20.0", features = ["image"] }

# Tools
image = { version = "0.24", features = ["jpeg", "png"] }
typout = "0.2.2"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# Bevy dependencies init
bevy = "0.9.1"
bevy_ui = "0.9.1"
bevy_text = "0.9.1"
bevy_animation = "0.9.1"
bevy_egui = "0.18.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3" 

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
